--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
